# aligons

./: .gitignore  README.md  cspell.yml  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
aligons/: __init__.py
aligons/db/: phylo.py  plantregmap.py
biolopy/: cli.py  fs.py  htslib.py  kent.py  lastz.py  mafs2cram.py  multiz.py  phast.py  pipeline.py  subp.py  wig.py
biolopy/data/: config.toml  oryza_sativa.chromAlias.txt
biolopy/db/: __init__.py  ensemblgenomes.py  name.py  phylo.py  plantregmap.py  prep.py  stat.py
biolopy/util/: __init__.py  cli.py  fs.py  subp.py
src/aligons/: __init__.py  pipeline.py
src/aligons/data/: __init__.py  actinopterygii.nhx  angiospermae.nhx  bigMaf.as  config.toml  kazusa.toml  ncbi.toml  plantregmap.toml  riceome.toml  solgenomics.toml
src/aligons/data/chromAlias/: oryza_sativa_zs97.chromAlias.txt  solanum_lycopersicum.chromAlias.txt
src/aligons/data/plantregmap/: osj_hvu  osj_obr  osj_ogl
src/aligons/db/: __init__.py  _rsrc.py  api.py  cart.py  ensemblgenomes.py  ftplib.py  jgi.py  kazusa.py  mask.py  ncbi.py  phylo.py  plantdhs.py  plantregmap.py  prep.py  riceencode.py  riceome.py  ricesuperpir.py  solgenomics.py  stat.py  tools.py
src/aligons/util/: __init__.py  __main__.py  cli.py  dl.py  fs.py  gff.py  maf.py  output.py  subp.py
tests/_data/: CHECKSUMS  genome.chromosome.1.gff3  genome.fa  genome.gff3  sorted.gff3  ucsc.bed  ucsc.maf
tests/db/: test_ensemblgenomes.py  test_name.py  test_phylo.py
tests/util/: test_cli.py  test_dl.py  test_fs.py  test_gff.py  test_init.py  test_maf.py  test_subp.py
tests/util/data/: CHECKSUMS  fasize.chrom.sizes  genome.chromosome.1.gff3  invalid.gff3  sorted.gff3
