[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aligons"
authors = [{name = "Watal M. Iwasaki", email = "heavywatal@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["description", "version"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.12"
dependencies = [
  "polars",
  "requests",
  "tomli-w",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.urls]
source = "https://github.com/heavywatal/aligons"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",   # missing docstring
  "D203", # incompatible
  "D213", # incompatible
  "ANN401", # Any
  "S101", # assert
  "COM812", # trailing comma
  "TD",   # todo
  "FIX",  # todo
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]
