[build-system]
requires = ["uv_build>=0.9.17,<1.0.0"]
build-backend = "uv_build"

[project]
name = "aligons"
version = "0.1.0"
description = "Pipeline for genome alignment and conservation scoring."
authors = [{ name = "Watal M. Iwasaki", email = "heavywatal@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.14"
dependencies = [
  "polars",
  "requests",
  "tomli-w",
]

[project.urls]
source = "https://github.com/heavywatal/aligons"

[dependency-groups]
dev = [
  "mkdocs-api-autonav",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",   # missing docstring
  "D203", # incompatible
  "D213", # incompatible
  "ANN401", # Any
  "S101", # assert
  "COM812", # trailing comma
  "TD",   # todo
  "FIX",  # todo
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN2"]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
]
